cleanup code by replaced - Stream.collect(Collectors.toList()) with .toList() - List.get(size()-1) with .getLast() - String.format() with .formatted() - printStackTrace() to LOG
Signed-off-by: Stefan Bischof <stbischof@bipolis.org>